# numbersapi-client

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
src/: numbersapi_cli.py  numbersapi_client.py
tests/: test_numbersapi_cli.py  test_numbersapi_client.py
